--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
     <title>yofukashi</title>
   </head>
   <body>
-    <h1>Hello, electron!</h1>
+    <script src="root.js"></script>
   </body>
 </html>
