--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,6 +5,6 @@
     <title>yofukashi</title>
   </head>
   <body>
-    <script src="root.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
