react render element by id
show warning if render directly into document.body

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,6 +5,7 @@
     <title>yofukashi</title>
   </head>
   <body>
+    <div id="application"></div>
     <script src="index.js"></script>
   </body>
 </html>
