add scss building task

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>yofukashi</title>
+    <link rel="stylesheet" href="stylesheets/application.css" media="screen">
   </head>
   <body>
     <div id="application"></div>
